changed footer according to mockups, added About Us page

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -10,45 +10,20 @@
                 <div class="left-side">
                     <ul class="list-of-site-links">
                         <li>
-                            <a class="router-links" href="/management/advices">[[#{greenCity.page.footer.advices}]]</a>
+                            <a class="router-links"
+                               href="/management/eco-news">[[#{greenCity.page.footer.eco.news}]]</a>
+                        </li>
+                        <li>                        <!-- /{userId}/findAll/friends/ -->
+                            <a class="router-links" href="/management/users/">[[#{greenCity.page.footer.friends}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/achievement">[[#{greenCity.page.footer.achievement}]]</a>
-                        </li>
-                        <li>
-                            <a class="router-links" href="/management/eco-news">[[#{greenCity.page.footer.eco.news}]]</a>
-                        </li>
-                        <li>
-                            <a class="router-links" href="/management/tipsandtricks">[[#{greenCity.page.footer.tips.tricks}]]</a>
-                        </li>
-                        <li>
-                            <a class="router-links" href="#">[[#{greenCity.page.footer.fact.of.the.day}]]</a>
-                        </li>
-                        <li>
-                            <a class="router-links" href="/management/users">[[#{greenCity.page.footer.users}]]</a>
+                            <a class="router-links" href="/management/aboutus/">[[#{greenCity.page.footer.about.us}]]</a>
                         </li>
                         <li>
                             <a class="router-links" href="/management/habits/">[[#{greenCity.page.footer.habits}]]</a>
                         </li>
-                        <li>
-                            <a class="router-links" href="/management/facts">[[#{greenCity.page.footer.habit.facts}]]</a>
-                        </li>
-                        <li>
-                            <a class="router-links" href="/management/rating/">
-                                [[#{greenCity.page.footer.facts.rating}]]
-                            </a>
-                        </li>
-                        <li>
-                            <a class="router-links" href="/management/places/">[[#{greenCity.page.footer.places}]]</a>
-                        </li>
-                        <li>
-                            <a class="router-links" href="/management/tags/">[[#{greenCity.page.footer.tags}]]</a>
-                        </li>
-                        <li>
-                            <a class="router-links" href="/management/socialnetworkimages">[[#{greenCity.page.footer.social.network.images}]]</a>
-                        </li>
-                        <li>
-                            <a class="router-links-custom" href="/management/shopping-list-items">[[#{greenCity.page.footer.shoppingListItems}]]</a>
+                        <li>                    <!-- 11111111111111111111111 -->
+                            <a class="router-links" href="/management/">[[#{greenCity.page.footer.ubs.courier}]]</a>
                         </li>
                     </ul>
                 </div>
